# Weather-Ready-AI

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run.sh
db/migrations/: 001_initial_schema.sql  002_signal_run_link.sql  003_notification_events.sql  004_reference_tracking.sql  005_connector_truth_log.sql  006_confidence_calibration.sql  007_conversation_note_log.sql  008_supervisor_runtime.sql  009_correction_suggestions.sql  010_external_scan_learning.sql  011_external_source_catalog.sql  012_external_source_governance.sql  014_conversation_messages.sql  (+21 more)
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
knowledge-base/: 01_system_overview.md  02_frontend.md  03_api_layer.md  04_agents.md  05_orchestration.md  06_data_layer.md  07_external_world.md  README.md
tests/: test_agents_anomaly_explainer.py  test_agents_conversation_note_extractor.py  test_agents_conversation_orchestrator.py  test_agents_current_state_retriever.py  test_agents_dispatcher.py  test_agents_prediction_governor.py  test_agents_signal_interpreter.py  test_agents_temporal_memory_retriever.py  test_ai_factory.py  test_conversation_note_dispatch.py  test_history_upload_reference.py  test_learning_operator_context_adjustment.py  test_operator_communication.py  test_operator_context_digest_repository.py  test_orchestrator_prediction_governor_dispatch.py  test_retriever_hooks_temporal_payload.py  test_source_check_logging.py  test_tool_executor_query_tools.py  test_unified_setup_dispatch.py
(+158 files in other folders)
