[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stormready-v3"
version = "0.1.0"
description = "Weather-aware dinner forecasting application for restaurant operators"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.1,<2",
  "fastapi>=0.115,<1",
  "numpy>=1.26,<3",
  "pandas>=2.0,<3",
  "pygam>=0.9,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
ai = [
  "openai>=1.0,<2",
]
dev = [
  "pytest>=8,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stormready_v3 = ["agents/policies/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
